# ZipFly

./: .gitignore  README.md  classsssadasdas.py  myZipFile.py  pyproject.toml  requirements.txt  tester.py
.github/workflows/: pypi-publish.yml
src/zipFly/: BaseFile.py  GenFile.py  LocalFile.py  ZipBase.py  ZipFly.py  consts.py
zipFly/: BaseFile.py  Compressor.py  GenFile.py  LocalFile.py  ZipBase.py  ZipFly.py  __init__.py  consts.py
zipstream/: BaseFile.py  GenFile.py  LocalFile.py  ZipBase.py  __init__.py  consts.py  zipstream.py
