# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zipFly64"
version = "1.0.0"
description = "Stream zip64 archives on the fly."
readme = "README.md"
authors = [{ name = "Pamparampampam", email = "reallpamparampam.pl@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["zip64", "zip", "streaming", "zipfly"]
dependencies = [
    "aiofiles >= 24.1.0",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/pam-param-pam/ZipFly"

